Get rid of support for URL in the filenames